--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.3",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -20,7 +21,11 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "all": "^0.0.0",
+    "echarts": "^5.3.0",
     "firebase": "^9.6.7",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
+    "ngx-echarts": "^8.0.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.2.0",
     "rxfire": "^6.0.0",
